# dynafit-sdlc-automation

./: .env.example  .gitignore  AGENT.md  README.md  docker-compose.yml  main.py  pyproject.toml  schema_changelog.md
.claude/: settings.local.json
.github/workflows/: ci.yml
.trunk/: trunk.yaml
agents/: AGENT.md
agents/classification/: AGENT.md  agent.py  llm_classifier.py  preflight.py  sanity_checker.py
agents/ingestion/: AGENT.md  agent.py  doc_parser.py  normalizer.py  req_extractor.py  semantic_chunker.py  validator.py
agents/matching/: AGENT.md  agent.py  confidence_scorer.py  embedding_match.py
agents/retrieval/: AGENT.md  agent.py  context_assembler.py  parallel_retriever.py  query_builder.py  reranker.py  rrf_fusion.py
agents/validation/: AGENT.md  agent.py  consistency_checker.py  fdd_generator.py  override_handler.py  report_generator.py
api/: AGENT.md  dependencies.py  routes.py  server.py
core/: AGENT.md  __init__.py
core/config/: settings.py  thresholds.py
core/config/module_config/: ap.yaml  ar.yaml  gl.yaml  scm.yaml
core/prompts/: classification_system.j2  classification_user.j2  ingestion_extract.j2
core/schemas/: __init__.py  classification_result.py  enums.py  match_result.py  requirement_atom.py  retrieval_context.py
core/state/: graph.py  requirement_state.py
docs/: AGENT.md  executor.md  features.md  generator.md  pipeline-data-flow.md  planner.md
infrastructure/: AGENT.md
infrastructure/llm/: client.py
infrastructure/storage/: postgres_client.py  redis_client.py
infrastructure/vector_db/: embedder.py  pgvector_client.py  qdrant_client.py
knowledge_base/: AGENT.md
scripts/: setup_postgres.py  setup_qdrant.py
tests/: AGENT.md
tests/ingestion/: test_semantic_chunker.py
ui/: .gitignore  README.md  package-lock.json  package.json
ui/app/: globals.css  layout.tsx
ui/app/dashboard/: page.tsx
ui/components/: WelcomeScreen.tsx
ui/components/layout/: Navbar.tsx  PhaseStepper.tsx
ui/components/modals/: OverrideModal.tsx
ui/components/phases/: Phase1Ingestion.tsx  Phase2Retrieval.tsx  Phase3Matching.tsx  Phase4Classification.tsx  Phase5Validation.tsx
ui/components/shared/: ConfidenceMeter.tsx  EmptyState.tsx  ErrorBanner.tsx  LogStream.tsx  ProgressRing.tsx  StatCard.tsx  StatusBadge.tsx
ui/docs/: COMPONENTS.md  SIMULATION.md  STATE.md  STYLING.md  TASKS.md  TYPES.md
ui/hooks/: usePhaseRunner.ts
ui/lib/: api.ts  simulation.ts
ui/store/: useDynafitStore.ts
ui/types/: index.ts
