[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynafit"
version = "1.0.0"
description = "D365 F&O Requirement Fitment Engine — AI-powered multi-agent fitment analysis"
requires-python = ">=3.11"

dependencies = [
    # Orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langsmith>=0.1.0",

    # LLM & AI
    "anthropic>=0.34.0",
    "sentence-transformers>=3.0.0",     # bge-large-en-v1.5
    "transformers>=4.40.0",

    # Vector DB & Search
    "qdrant-client>=1.10.0",
    "rank-bm25>=0.2.2",
    "faiss-cpu>=1.8.0",                  # FAISS for dedup in ingestion

    # NLP
    "spacy>=3.7.0",
    "rapidfuzz>=3.6.0",

    # Document parsing
    "docling>=2.0.0",
    "unstructured[all-docs]>=0.14.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.10",               # OCR fallback
    "argostranslate>=1.9.0",             # Language translation for non-EN BRDs

    # Data validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # Database
    "asyncpg>=0.29.0",                   # Async PostgreSQL
    "pgvector>=0.3.0",                   # pgvector Python client
    "redis>=5.0.0",                      # Async Redis

    # Templating
    "jinja2>=3.1.4",

    # Token counting
    "tiktoken>=0.7.0",

    # Async & concurrency
    "tenacity>=8.3.0",                   # Retry logic
    "celery[redis]>=5.4.0",              # Task queue

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",           # File uploads

    # Observability
    "structlog>=24.4.0",
    "prometheus-client>=0.20.0",

    # Data processing
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "networkx>=3.3.0",                   # Conflict graph in Phase 5

    # Reranking
    "sentence-transformers>=3.0.0",      # Also for CrossEncoder

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.5.0",              # Parallel test execution
    "freezegun>=1.5.0",                  # Time mocking
    "factory-boy>=3.3.0",               # Test data factories
    "respx>=0.21.0",                    # HTTP mocking for httpx
    "ruff>=0.5.0",                      # Linting + formatting
    "mypy>=1.10.0",                     # Type checking
    "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast isolated unit tests",
    "integration: integration tests with mocked services",
    "e2e: full end-to-end pipeline tests",
    "eval: accuracy evaluation against golden set",
    "slow: tests taking more than 10 seconds",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["agents", "core", "infrastructure", "api", "knowledge_base"]
omit = [
    "tests/*",
    "scripts/*",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # type annotations
    "RUF", # Ruff-specific rules
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.hatch.envs.default]
dependencies = ["dynafit[dev]"]